restarted - fixed wallpaper stretch and mobile

--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,15 @@
     z-index: -1;
     width: 100%;
     height: 100%;
-    opacity: 20%;
-}
+
+    background:
+        linear-gradient(45deg, rgba(40,156,176,0.7) 0%, rgba(59,2,99,0.7) 100%) no-repeat center center fixed, /* gradient made with https://cssgradient.io */
+        url("../images/background.svg") no-repeat center center fixed;
+    background-size: cover;
+}   
 
 body {
-    /* gradient made with https://cssgradient.io/ */
-    background: rgb(40,156,176);
-    background-image: linear-gradient(45deg, rgba(40,156,176,1) 0%, rgba(59,2,99,1) 100%);
+    
     color: seashell;
     font-family: 'IBM Plex Sans', sans-serif;
 }
@@ -107,8 +109,8 @@ footer {
     border-top: 1px solid white;
 }
 
-footer .copyright {
-    font-size: 0.5em;
+footer #copyright {
+    font-size: 0.7em;
     text-align: center;
 }
 
